--- a/27-notekeeperApp-react/src/components/Forms/Forms.module.css
+++ b/27-notekeeperApp-react/src/components/Forms/Forms.module.css
@@ -1,7 +1,7 @@
 .background{
   width: 100vw;
   height: 100vh;
-  position: absolute;
+  position: fixed;
   background-color: rgba(240, 248, 255, 0.746);
   z-index: 10;
 }
@@ -11,7 +11,7 @@
   align-items: center;
   width: 100vw;
   height: 100vh;
-  position: absolute;
+  position: fixed;
 }
 
 .display {
